# python-giaic

./: README.md  app.py  papers.csv  pyproject.toml  recommendation_model.pkl  tfidf_vectorizer.pkl  train_model.py  user_paper_interactions.csv
.devcontainer/: devcontainer.json
06_Build_Compose_and_Decorate_A_Complete_Traditional_OOP_Practice_Series/: 10. Instance Methods python Copy Edit.py  11. Class Methos.py  12. Static Methods.py  13. Composition.py  14. Aggregation.py  15. Method Resolution Order (MRO).py  16. Function Decorators.py  17. Class Decorators python Copy Edit.py  18. Property Decorators.py  19. callable() and __call__().py  2-using_cls.py  20. Creating a Custom Exception.py  21. Make a Custom Class Iterable.py  3. Public Variables and Methods.py  4. Class Variables and Class Methods.py  5. Static Variables and Static Methods.py  6. Constructors and Destructors.py  7. Access Modifiers- Public, Private, and Protected.py  8. The super() Function python Copy Edit.py  9. Abstract Classes and Methods.py
Library_Management_System/: main.py
Research-papers-Recommendation-System/: interface.py  main.py  pyproject.toml  recommender.py  sample_data_creator.py  tempCodeRunnerFile.py  utils.py
Secure_Data_Encryption_System-streamlit/: README.md  data.json  main.py  pyproject.toml  sdes.db  users.json
growth-mindset-challange_data-sweeper/: main.py  pyproject.toml
images_to_pdf/: main.py  pyproject.toml
number_guessing_game/: main.py  pyproject.toml
password_strength_meter/: main.py
personal_library_manager/: main.py
text_analyzer/: README.md  (+2 more)
(+24 files in other folders)
