[project]
name = "research-paper-recommendation-ai-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "joblib>=1.5.1",
    "pandas>=2.2.3",
    "scikit-learn>=1.6.1",
    "scipy>=1.15.3",
    "streamlit>=1.45.1",
]
